# nix-flake-templates

./: .gitignore  LICENSE  README.md  flake.nix
basic/: flake.nix
deno/: flake.nix
go/: flake.nix  go.mod
node/: flake.nix  package-lock.json  package.json
python/: .gitignore  flake.nix  pyproject.toml
rust/: Cargo.toml  flake.nix
svelte/: eslint.config.js  eslint.config.mjs  flake.nix  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
svelte-routify/: .gitignore  .prettierignore
svelte/src/: App.svelte
svelte/src/routes/: [...404].svelte  index.svelte
sveltekit/: .gitignore  .prettierrc  deno.json  eslint.config.js  flake.nix  package-lock.json  package.json  tailwind.config.js
typescript/: eslint.config.mjs  flake.nix  package-lock.json  package.json
