[project]
name = "my-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "DataHearth", email = "dev@antoine-langlois.net" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-package = "my_package:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
